Renommage de code_formation en code_certification (#55)
* Renommage de code_formation en code_certification

* Renommage de codes_formation en code_certifications
